<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="log_in">Log in</string>
    <string name="hello">Hello!</string>
    <string name="welcome_shoe_store">Welcome to Shoe Store!</string>
    <string name="to_instruction">Shoes Instruction</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoe_instruction">Shoe Instruction</string>
    <string name="shoe_instruction_contents">"A shoe is an item of footwear intended to protect and comfort the human foot. Shoes are also used as an item of decoration and fashion. The design of shoes has varied enormously through time and from culture to culture, with appearance originally being tied to function. "</string>
    <string name="check_shoe_list">Check Shoe List</string>
    <string name="to_shoe_detail">To Shoe Detail</string>
    <string name="log_out">Log Out</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_description">Shoe Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_shoe">Add New Shoe</string>

</resources>
