<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:cardBackgroundColor="@android:color/holo_green_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/shoe_name_card_view"
                    style="@style/shoe_card_style"
                    android:autofillHints="Shoe Name"
                    android:inputType="text"
                    android:text="@{shoe.name}" />

                <EditText
                    android:id="@+id/shoe_company_card_view"
                    style="@style/shoe_card_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/company"
                    android:inputType="text"
                    android:text="@{shoe.company}" />

                <EditText
                    android:id="@+id/shoe_size_card_view"
                    style="@style/shoe_card_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/shoe_size"
                    android:inputType="number"
                    android:text="@{String.valueOf(shoe.size)}" />
                <!--shoe.size is Int which is the reason why  android:text="@{shoe.size} will cause app crash"-->

                <EditText
                    android:id="@+id/shoe_description_card_view"
                    style="@style/shoe_card_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/shoe_description"
                    android:inputType="text"
                    android:text="@{shoe.description}" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>